# CSE100-PA3

./: bash_binary.txt  compressed.txt  meson.build  r-compressed.txt  uncompressed.txt
data/: test.txt
src/: compress.cpp  meson.build  uncompress.cpp
src/bitStream/: meson.build
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  meson.build
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  meson.build
src/encoder/: HCNode.hpp  HCNode2.hpp  HCTree.cpp  HCTree.hpp  HCTree2.cpp  HCTree2.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp  test_HCTree2.cpp
